<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cardio"
            android:title="@string/menu_cardio" />
        <item
            android:id="@+id/nav_workout"
            android:title="@string/menu_workout" />
        <item
            android:id="@+id/nav_weighin"
            android:title="@string/menu_weighin" />
        <item
            android:id="@+id/nav_progress"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_alarm"
            android:title="@string/menu_alarm" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
    </group>
</menu>
